# pop2

./: .gitignore  CMakeLists.txt  README.md  l5_map.txt
.github/workflows/: pages.yml
docs/: DEV-LOG.md  render-perf-night-plan.md
pop2-analyzer/: NOTES.md  analyze_code.py  flow_analyze.py  m68k.py
pop2-recomp/: recomp.py
pop2-runtime/include/pop2/: cpu.h  mac.h
pop2-runtime/src/: file_mgr.cpp  font8x16.inc  main.cpp  memory_mgr.cpp  platform_tables.inc  quickdraw.cpp  resource_mgr.cpp  runtime.cpp  traps.cpp  video.cpp
tools/: decode_level.py  decode_mdrv.py  dump_resources.py  gen_path.py  gen_platform_tables.py  level_platforms.py  level_solve.py  make-web-data.sh  manual-fills.txt  platform-tables.txt  prep-web-data.sh  psf2inc.py  rebuild_tables.py  verify_tables.py  wasm-save-test.cjs
web/: pre.js  robots.txt  shell-picker.html  shell.html  sitemap.xml
